--- a/src/content/docs/romn/tipitaka/vi/paci/1/1-8/1-8-7.mdx
+++ b/src/content/docs/romn/tipitaka/vi/paci/1/1-8/1-8-7.mdx
@@ -5,6 +5,7 @@ sidebar:
   order: 7
 type: "tipitaka"
 basket: "vi"
+book: "paci"
 ---
 import Division from '@components/Division.astro';
 import Paragraph from '@components/Paragraph.astro';
@@ -14,7 +15,7 @@ import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 <DynamicBreadcrumb />
 
 
-<Paragraph number="2093" bookId="paci" type="center">
+<Paragraph number="2093" type="center" book="paci">
 Ime kho panāyasmanto satta adhikaraṇasamathā
 
   
@@ -23,29 +24,29 @@ dhammā uddesaṃ āgacchanti.
 
 </Paragraph>
 
-<Division number="655" bookId="paci">
+<Division number="655" book="paci">
 
-<Paragraph number="2094" bookId="paci">
+<Paragraph number="2094" book="paci">
 Uppannuppannānaṃ adhikaraṇānaṃ samathāya vūpasamāya sammukhāvinayo dātabbo, sativinayo dātabbo, amūḷhavinayo dātabbo, paṭiññāya kāretabbaṃ, yebhuyyasikā, tassapāpiyasikā, tiṇavatthārakoti. (1--*7*:**221--227**)
 </Paragraph>
 
-<Paragraph number="2095" bookId="paci">
+<Paragraph number="2095" book="paci">
 Uddiṭṭhā kho, āyasmanto, satta adhikaraṇasamathā dhammā. Tatthāyasmante pucchāmi—  “kaccittha parisuddhā”? Dutiyampi pucchāmi—  “kaccittha parisuddhā”? Tatiyampi pucchāmi—  “kaccittha parisuddhā”? Parisuddhetthāyasmanto, tasmā tuṇhī, evametaṃ dhārayāmīti.
 
 </Paragraph>
 </Division>
 
-<Paragraph number="2096" bookId="paci">
+<Paragraph number="2096" type="center" book="paci">
 Adhikaraṇasamathā niṭṭhitā.
 
 
 </Paragraph>
 
-<Paragraph number="2097" bookId="paci">
+<Paragraph number="2097" book="paci">
 Uddiṭṭhaṃ kho, āyasmanto, nidānaṃ; uddiṭṭhā cattāro pārājikā dhammā; uddiṭṭhā terasa saṃghādisesā dhammā; uddiṭṭhā dve aniyatā dhammā; uddiṭṭhā tiṃsa nissaggiyā pācittiyā dhammā; uddiṭṭhā dvenavuti pācittiyā dhammā; uddiṭṭhā cattāro pāṭidesanīyā dhammā; uddiṭṭhā sekhiyā dhammā; uddiṭṭhā satta adhikaraṇasamathā dhammā. Ettakaṃ tassa bhagavato suttāgataṃ suttapariyāpannaṃ anvaddhamāsaṃ uddesaṃ āgacchati. Tattha sabbeheva samaggehi sammodamānehi avivadamānehi sikkhitabbanti.
 
 </Paragraph>
 
-<Paragraph number="2098" bookId="paci">
+<Paragraph number="2098" type="center" book="paci">
 Mahāvibhaṅgo niṭṭhito.
 </Paragraph>
