feat: update Paragraph styles and add Emphasis component
- Increased text-indent for paragraph-normal and paragraph-section from 2em to 5em.
- Adjusted margin-left for italic paragraphs from 35% to 25%.
- Introduced Emphasis component for highlighting specific text with customizable styles.
- Updated content in 1-8-7.mdx to utilize the new Emphasis component for better text representation.
- Added build-locale.js script for building Tipitaka dataset with support for multiple locales.

--- a/src/content/docs/romn/tipitaka/vi/paci/1/1-8/1-8-7.mdx
+++ b/src/content/docs/romn/tipitaka/vi/paci/1/1-8/1-8-7.mdx
@@ -9,6 +9,7 @@ book: "paci"
 ---
 import Division from '@components/Division.astro';
 import Paragraph from '@components/Paragraph.astro';
+import Emphasis from '@components/Emphasis.astro';
 
 import DynamicBreadcrumb from '@components/DynamicBreadcrumb.astro';
 
@@ -27,7 +28,7 @@ dhammā uddesaṃ āgacchanti.
 <Division number="655" book="paci">
 
 <Paragraph number="2094" book="paci">
-Uppannuppannānaṃ adhikaraṇānaṃ samathāya vūpasamāya sammukhāvinayo dātabbo, sativinayo dātabbo, amūḷhavinayo dātabbo, paṭiññāya kāretabbaṃ, yebhuyyasikā, tassapāpiyasikā, tiṇavatthārakoti. (1--*7*:**221--227**)
+Uppannuppannānaṃ adhikaraṇānaṃ samathāya vūpasamāya sammukhāvinayo dātabbo, sativinayo dātabbo, amūḷhavinayo dātabbo, paṭiññāya kāretabbaṃ, yebhuyyasikā, tassapāpiyasikā, tiṇavatthārakoti. (1--*7*:<Emphasis>221–227</Emphasis>)
 </Paragraph>
 
 <Paragraph number="2095" book="paci">
